# Subscrybe

./: ACCESSIBILITY-ENHANCEMENTS.md  BACKEND-DEPLOYMENT.md  BONUS-POOLS-STATUS.md  CARDANO-MEMES-GUIDE.md  CHANGES-MADE.md  COMPLETE-SETUP.md  CUSTOM-SUBSCRIPTION-UPDATE.md  DARK-GRADIENT-UPDATE.md  DEMO-GUIDE.md  DEMO-READY.md  DEMO-STATUS.md  ENHANCED-HYDRA-DEMO.md  FEATURES-CHECKLIST.md  FINAL-BONUS-STATUS.md  HOW-TO-CHECK.md  HYDRA-INTEGRATION-COMPLETE-PROMPT.md  HYDRA-INTEGRATION-COMPLETE.md  HYDRA-REAL-INTEGRATION.md  INTEGRATION-COMPLETE.md  INTEGRATION-GUIDE.md  LIGHTHOUSE-AUDIT.md  MAKE-IT-LOOK-REAL.md  MEMES-GALLERY-READY.md  PROJECT-SUMMARY.md  PROMPTS-FOR-IMPROVEMENTS.md  QUICK-START.md  README.md  READY-TO-USE.md  REAL-HYDRA-IN-WEBSITE.md  RESTART-BACKEND.md  SUBMISSION.md  TEST-ALL-BONUS-FEATURES.md  TEST-BACKEND-CONNECTION.md  TEST-CHECKLIST.md  YES-ITS-INTEGRATED.md  check-hydra-status.ps1  check-status.ps1  package-lock.json  package.json  test-demo.ps1  (+3 more)
app/: globals.css  layout.tsx  page.tsx
app/calendar/: page.tsx
app/contracts/: page.tsx
app/dashboard/: page.tsx
app/hydra/: page.tsx
app/memes/: page.tsx
app/memes-test/: page.tsx
app/merchant/: page.tsx
app/micro-subscriptions/: page.tsx
app/pay-per-use/: page.tsx
app/payment-service/: page.tsx
app/privacy/: page.tsx
app/subscriptions/: page.tsx
backend/: README.md  package-lock.json  package.json  test-custom.json
backend/src/: server.js
components/dashboard/: spending-chart.tsx  spending-overview.tsx  upcoming-payments.tsx
contracts/: DEPLOYMENT.md  README.md  cabal.project  contract-simulator.js  subscription-vault.cabal  subscription-vault.hs
contracts/app/: Main.hs
contracts/test/: Tests.hs
hydra-node/: docker-compose.yml
lib/: animations.ts  api-client.ts  blockchain.ts  context.tsx  hydra-api.ts  mock-data.ts  utils.ts
(+41 files in other folders)
