cabal-version:      3.0
name:               subscription-vault
version:            1.0.0
synopsis:           Subscrybe subscription vault smart contract
description:        Plutus smart contract for managing recurring subscription payments
license:            Apache-2.0
author:             Subscrybe Team
maintainer:         contracts@subscrybe.io
category:           Blockchain
build-type:         Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wmissing-deriving-strategies
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fobject-code
    -fno-strictness

library
  import:           lang
  exposed-modules:  SubscriptionVault
  build-depends:
    base >= 4.14 && < 5,
    aeson,
    bytestring,
    containers,
    plutus-core,
    plutus-ledger-api,
    plutus-tx,
    plutus-tx-plugin,
    plutus-script-utils,
    text
  hs-source-dirs:   .

executable subscription-vault-cli
  import:           lang
  main-is:          Main.hs
  build-depends:
    base,
    subscription-vault,
    plutus-ledger-api,
    bytestring,
    aeson,
    cardano-api
  hs-source-dirs:   app

test-suite subscription-vault-tests
  import:           lang
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  build-depends:
    base,
    subscription-vault,
    plutus-ledger-api,
    plutus-tx,
    tasty,
    tasty-hunit
  hs-source-dirs:   test
